feat: 使用vlm实现成熟度识别
